exports[`invalid(1): {\"exports\": \"./index.js\"} 1`] = `

[Input]
  1 | {"exports": "./index.js"}

`;

exports[`invalid(1): {\"exports\": \"./index.js\"} 2`] = `

Message:
> 1 | {"exports": "./index.js"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Declare a \`sideEffects\` field to describe import-time side effects.

Suggestion 1/2: Add \`"sideEffects": false\`.:
  1 | {"exports": "./index.js", "sideEffects": false}

Suggestion 2/2: Add \`"sideEffects": true\`.:
  1 | {"exports": "./index.js", "sideEffects": true}

`;

exports[`invalid(2): {\n  \"name\": \"my-package\",\n  \"exports\": {\n    \"default\": \"./index.js\"\n  },\n  \"engines\": {\"node\": \">=18\"}\n} 1`] = `

[Input]
  1 | {
  2 |   "name": "my-package",
  3 |   "exports": {
  4 |     "default": "./index.js"
  5 |   },
  6 |   "engines": {"node": ">=18"}
  7 | }

`;

exports[`invalid(2): {\n  \"name\": \"my-package\",\n  \"exports\": {\n    \"default\": \"./index.js\"\n  },\n  \"engines\": {\"node\": \">=18\"}\n} 2`] = `

Message:
> 1 | {
    | ^
> 2 |   "name": "my-package",
    | ^^^^^^^^^^^^^^^^^^^^^^^
> 3 |   "exports": {
    | ^^^^^^^^^^^^^^
> 4 |     "default": "./index.js"
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 5 |   },
    | ^^^^
> 6 |   "engines": {"node": ">=18"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 7 | }
    | ^ Declare a \`sideEffects\` field to describe import-time side effects.

Suggestion 1/2: Add \`"sideEffects": false\`.:
  1 | {
  2 |   "name": "my-package",
  3 |   "exports": {
  4 |     "default": "./index.js"
  5 |   },
  6 |   "sideEffects": false,
  7 |   "engines": {"node": ">=18"}
  8 | }

Suggestion 2/2: Add \`"sideEffects": true\`.:
  1 | {
  2 |   "name": "my-package",
  3 |   "exports": {
  4 |     "default": "./index.js"
  5 |   },
  6 |   "sideEffects": true,
  7 |   "engines": {"node": ">=18"}
  8 | }

`;

exports[`invalid(3): {\"exports\": {\"./feature\": \"./feature.js\"}} 1`] = `

[Input]
  1 | {"exports": {"./feature": "./feature.js"}}

`;

exports[`invalid(3): {\"exports\": {\"./feature\": \"./feature.js\"}} 2`] = `

Message:
> 1 | {"exports": {"./feature": "./feature.js"}}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Declare a \`sideEffects\` field to describe import-time side effects.

Suggestion 1/2: Add \`"sideEffects": false\`.:
  1 | {"exports": {"./feature": "./feature.js"}, "sideEffects": false}

Suggestion 2/2: Add \`"sideEffects": true\`.:
  1 | {"exports": {"./feature": "./feature.js"}, "sideEffects": true}

`;

exports[`invalid(4): {\"exports\": [\"./index.js\", \"./fallback.js\"]} 1`] = `

[Input]
  1 | {"exports": ["./index.js", "./fallback.js"]}

`;

exports[`invalid(4): {\"exports\": [\"./index.js\", \"./fallback.js\"]} 2`] = `

Message:
> 1 | {"exports": ["./index.js", "./fallback.js"]}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Declare a \`sideEffects\` field to describe import-time side effects.

Suggestion 1/2: Add \`"sideEffects": false\`.:
  1 | {"exports": ["./index.js", "./fallback.js"], "sideEffects": false}

Suggestion 2/2: Add \`"sideEffects": true\`.:
  1 | {"exports": ["./index.js", "./fallback.js"], "sideEffects": true}

`;

exports[`invalid(5): {\"exports\": \"./index.js\", \"custom\": true} 1`] = `

[Input]
  1 | {"exports": "./index.js", "custom": true}

`;

exports[`invalid(5): {\"exports\": \"./index.js\", \"custom\": true} 2`] = `

Message:
> 1 | {"exports": "./index.js", "custom": true}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Declare a \`sideEffects\` field to describe import-time side effects.

Suggestion 1/2: Add \`"sideEffects": false\`.:
  1 | {"exports": "./index.js", "sideEffects": false, "custom": true}

Suggestion 2/2: Add \`"sideEffects": true\`.:
  1 | {"exports": "./index.js", "sideEffects": true, "custom": true}

`;

exports[`invalid(6): {\r\n\t\"exports\": \"./index.js\",\r\n\t\"engines\": {\"node\": \">=18\"}\r\n} 1`] = `

[Input]
  1 | {
  2 | 	"exports": "./index.js",
  3 | 	"engines": {"node": ">=18"}
  4 | }

`;

exports[`invalid(6): {\r\n\t\"exports\": \"./index.js\",\r\n\t\"engines\": {\"node\": \">=18\"}\r\n} 2`] = `

Message:
> 1 | {
    | ^
> 2 | 	"exports": "./index.js",
    | ^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	"engines": {"node": ">=18"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | }
    | ^ Declare a \`sideEffects\` field to describe import-time side effects.

Suggestion 1/2: Add \`"sideEffects": false\`.:
  1 | {
  2 | 	"exports": "./index.js",
  3 | 	"sideEffects": false,
  4 | 	"engines": {"node": ">=18"}
  5 | }

Suggestion 2/2: Add \`"sideEffects": true\`.:
  1 | {
  2 | 	"exports": "./index.js",
  3 | 	"sideEffects": true,
  4 | 	"engines": {"node": ">=18"}
  5 | }

`;

exports[`invalid(7): {\"private\": true, \"exports\": \"./index.js\"} 1`] = `

[Input]
  1 | {"private": true, "exports": "./index.js"}

`;

exports[`invalid(7): {\"private\": true, \"exports\": \"./index.js\"} 2`] = `

Message:
> 1 | {"private": true, "exports": "./index.js"}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Declare a \`sideEffects\` field to describe import-time side effects.

Suggestion 1/2: Add \`"sideEffects": false\`.:
  1 | {"private": true, "exports": "./index.js", "sideEffects": false}

Suggestion 2/2: Add \`"sideEffects": true\`.:
  1 | {"private": true, "exports": "./index.js", "sideEffects": true}

`;
